--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./app/index.js",
+    "dev": "nodemon ./app/index.js \"npm run lint\"",
+    "lint": "eslint api --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
