--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./app/index.js \"npm run lint\"",
+    "dev": "nodemon ./src/main/app/index.js \"npm run lint\"",
     "lint": "eslint api --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "eslint": "^8.19.0",
+    "jest": "^28.1.2",
     "nodemon": "^2.0.19",
     "sequelize-cli": "^6.4.1"
   }
