--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/main/app/index.js",
     "dev": "nodemon ./src/main/app/index.js \"npm run lint\"",
     "lint": "eslint api --fix",
     "migrate": "node_modules/.bin/sequelize db:migrate",
