--- a/src/main/infra/database/config/config.json
+++ b/src/main/infra/database/config/config.json
@@ -1,9 +1,6 @@
 {
   "development": {
-    "username": "sa",
-    "password": "sa",
-    "database": "currency",
-    "host": "127.0.0.1",
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres"
   },
   "test": {
